src/objects/Account_Group__c.object
<CustomObject>
    <description>Account&apos;s relationship to an Account Group.</description>
    <fields>
        <fullName>Account_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Group</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Relationships (Account)</relationshipLabel>
        <relationshipName>Account_Relationships1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Relationships</relationshipLabel>
        <relationshipName>Account_Relationships</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Membership_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Membership Number</label>
        <length>155</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Optics_Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Doctor has chosen to receive Optics Group discounts through this Account Group.</inlineHelpText>
        <label>Optics Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Q1_IncentivEYES__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Q1 IncentivEYES</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q2_IncentivEYES__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Q2 IncentivEYES</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q3_IncentivEYES__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Q3 IncentivEYES</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>IF(   OR( Start_Date__c  =  TODAY() , AND( Start_Date__c  &lt;  TODAY() , OR( End_Date__c   &gt;=  TODAY()  ,  ISBLANK( End_Date__c ) ) ) ) , &quot;Active&quot;,  IF( Start_Date__c  &gt;  TODAY() , &apos;Future&apos;, &apos;Inactive&apos;) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <label>Account Relationship</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Account Relationship Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Q_IncentivEYES_Validation</fullName>
        <active>true</active>
        <description>Makes sure that the text fields only allow number and NA as values</description>
        <errorConditionFormula>(NOT(ISBLANK(Q1_IncentivEYES__c)) 
	&amp;&amp; NOT(REGEX(Q1_IncentivEYES__c, &quot;(?:\\+|\\-|\\$)?\\d{1,}(?:\\,?\\d{3})*(?:\\.\\d+)?%?&quot;)) 
	&amp;&amp; Q1_IncentivEYES__c &lt;&gt; &quot;N/A&quot;) 
||
(NOT(ISBLANK(Q2_IncentivEYES__c)) 
	&amp;&amp; NOT(REGEX(Q2_IncentivEYES__c, &quot;(?:\\+|\\$|\\$)?\\d{1,}(?:\\,?\\d{3})*(?:\\.\\d+)?%?&quot;)) 
	&amp;&amp; Q2_IncentivEYES__c &lt;&gt; &quot;N/A&quot;)
||
(NOT(ISBLANK(Q3_IncentivEYES__c)) 
	&amp;&amp; NOT(REGEX(Q3_IncentivEYES__c, &quot;(?:\\+|\\-|\\$)?\\d{1,}(?:\\,?\\d{3})*(?:\\.\\d+)?%?&quot;)) 
	&amp;&amp; Q3_IncentivEYES__c &lt;&gt; &quot;N/A&quot;) 
||
(NOT(ISBLANK(Q4_IncentivEYES__c)) 
	&amp;&amp; NOT(REGEX(Q4_IncentivEYES__c, &quot;(?:\\+|\\-|\\$)?\\d{1,}(?:\\,?\\d{3})*(?:\\.\\d+)?%?&quot;))
	&amp;&amp; Q4_IncentivEYES__c &lt;&gt; &quot;N/A&quot;)</errorConditionFormula>
        <errorMessage>Can only be a number or N/A</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VSPR6_End_Date_lessthan_Start_Date</fullName>
        <active>true</active>
        <errorConditionFormula>End_Date__c &lt; Start_Date__c</errorConditionFormula>
        <errorDisplayField>End_Date__c</errorDisplayField>
        <errorMessage>End date cannot be prior to start date.</errorMessage>
    </validationRules>
</CustomObject>